# toast-lang

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  LICENSE  Makefile  README.md  a.out  basic syntax.t  build.ninja  package.json  src.t  t  test.ll  test.t  test.to
include/: ast.h  parser.h  util.h
src/: ast.cpp  index.js  main.cpp  parser.cpp  util.cpp
src/compiler/: AST.hpp  codegen.hpp  compiler.js  lexer.cpp  lexer.hpp  lexer.js  parser.hpp
